<resources>
    <string name="app_name">EjemploNavegacionInferior</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_library">Library</string>
    <string name="title_trending">Trending</string>
    <string name="title_subscription">Subscription</string>
</resources>