<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/title_trending" />
    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/ic_baseline_subscriptions_24"
        android:title="@string/title_subscription" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_baseline_inbox_24"
        android:title="@string/title_inbox" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/title_library" />


</menu>